# gpt-moe

./: README.md  main.py  pyproject.toml  train.py
model/: wednesday_mark2.py
