[project]
name = "v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "matplotlib>=3.10.3",
    "mlx>=0.26.2",
    "numpy>=2.2.6",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "wandb>=0.21.0",
]
